--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -44,6 +44,7 @@ jobs:
 
     # Upload build artifact to the release
     - name: Upload artifact
+      shell: bash
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         RELEASE_URL: ${{ env.RELEASE_URL }}
