--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "up2share-desktop",
   "version": "1.2.0",
   "description": "A desktop app for Up2Share",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/up2share/desktop.git"
+  },
   "main": "./out/main/index.js",
   "author": "up2sha.re",
   "homepage": "https://up2sha.re",
