--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build:linux": "npm run build && electron-builder --linux",
+    "publish": "electron-builder --publish onTagOrDraft"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
