--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "up2share-desktop",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A desktop app for Up2Share",
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
+    "@sentry/electron": "^5.7.0",
     "electron-context-menu": "^4.0.4",
     "electron-updater": "^6.1.7"
   },
