--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "publish": "electron-builder --publish onTagOrDraft"
   },
   "dependencies": {
+    "@aptabase/electron": "^0.3.1",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@sentry/electron": "^5.7.0",
